--- a/README.rdoc
+++ b/README.rdoc
@@ -1,8 +1,12 @@
-= semantically-taggable
+= semantically_taggable
 
-Description goes here.
+A tagging system, based *extremely* heavily on acts_as_taggable_on (to the point of being a little grubby),
+but introduces tagging schemes and moves
+context into tags (so, for example, "Environment" in a :green_tags scheme is not semantically equivalent
+to "Environment" in an sysadmin's tagging scheme)}.  Also removes tagger/related capability, Postgres support and
+restricts compatibility to Rails 3 and above - so you need to be sure you need semantic tagging before using this!
 
-== Contributing to semantically-taggable
+== Contributing to semantically_taggable
  
 * Check out the latest master to make sure the feature hasn't been implemented or the bug hasn't been fixed yet
 * Check out the issue tracker to make sure someone already hasn't requested it and/or contributed it
